agrego useQuery para obtener los tipos de pokemones

--- a/src/App.css
+++ b/src/App.css
@@ -102,7 +102,7 @@ h1 {
   width: 100%;
 }
 
-.input-contenedor input {
+.input-contenedor input, .input-contenedor select {
   padding: 1rem;
   width: 300px;
   border-radius: 10px;
